github_data_collector/src/data/issue_comment/hopey-dishwasher_termpix.txt
Implements #25 
Fixes #24 
Thank you for your work!

As it seems to be error prone to compile it on different setups, it could be very helpful to have [an official Docker image](https://hub.docker.com/search?q=termpix&type=image).
I just tried to use Termpix and got this error:

```
error[E0599]: no method named `dimensions` found for type `image::DynamicImage` in the current scope
  --> /home/jonathan/.cargo/git/checkouts/termpix-408ef1586b012b19/c22d061/src/main.rs:53:41
   |
53 |     let (orig_width, orig_height) = img.dimensions();
   |                                         ^^^^^^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope, perhaps add a `use` for it:
   |
8  | use image::GenericImageView;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
error: failed to compile `termpix v0.1.0 (https://github.com/hopey-dishwasher/termpix#c22d061f)`, intermediate artifacts can be found at `/tmp/cargo-install9lI6DS`

Caused by:
  Could not compile `termpix`.

```
The distribution package generally chooses the source code of the tag or release.
in [aur](https://aur.archlinux.org/packages/termpix/)
it adopted release 0.11

so, if i install it
```
error[E0642]: patterns aren't allowed in methods without bodies
   --> /home/attenuation/.cargo/registry/src/github.com-1ecc6299db9ec823/rustc-serialize-0.3.17/src/serialize.rs:145:45
    |
145 |                                             &f_name: &str,
    |                                             ^^^^^^^

   Compiling lzw v0.9.0
   Compiling inflate v0.1.0
   Compiling color_quant v1.0.0
   Compiling regex-syntax v0.2.2
error: aborting due to previous error

For more information about this error, try `rustc --explain E0642`.
error: Could not compile `rustc-serialize`.
warning: build failed, waiting for other jobs to finish...
error: build failed
==> ERROR: A failure occurred in build().
    Aborting...
Error making: termpix

```
two years later, I request you to release a tag package
Hi, I was hoping to use this crate as a library in another project of mine ([paper](https://github.com/oinkiguana/paper-terminal)), but it is not published to crates.io so I am not currently able to publish my own crate.

I also needed to be able to write to my own `Write`r, so I had to make this little change.

Would you be willing to publish this crate? You can reimplement this change however you like if this is not the way you would like to do it.
Hi,
Trying to install on latest Ubuntu LTS gives the following error:
```
error[E0642]: patterns aren't allowed in methods without bodies                                                            --> /home/trophime/.cargo/registry/src/github.com-1ecc6299db9ec823/rustc-serialize-0.3.17/src/serialize.rs:145:45        |                                                                                                                   145 |                                             &f_name: &str,                                                            |                                             ^^^^^^^                                                                                                                                                                                          Compiling lzw v0.9.0                                                                                                    
Compiling inflate v0.1.0                                                                                                
Compiling glob v0.2.10                                                                                                  
Compiling byteorder v0.4.2                                                                                             
 Compiling strsim v0.3.0                                                                                                 
Compiling ansi_term v0.7.2                                                                                          
 error: aborting due to previous error                                                                                                                                                                                                           For more information about this error, try `rustc --explain E0642`.                                                     
error: Could not compile `rustc-serialize`.                                                                             
warning: build failed, waiting for other jobs to finish...                                                              
error: failed to compile `termpix v0.1.0 (https://github.com/hopey-dishwasher/termpix#bb2fcc5e)`, intermediate artifacts can be found at `/tmp/cargo-installhavuAZ`                                                                                                                                                                                                     Caused by:                                                                                                                
build failed
```
 
it would be really nice to have termpix working!!!
Best
C
Always show this:
# termpix
termpix: /lib64/libc.so.6: version `GLIBC_2.18' not found (required by termpix)

# rpm -qa | grep glibc
glibc-common-2.17-222.el7.x86_64
glibc-2.17-222.el7.x86_64
glibc-devel-2.17-222.el7.x86_64
glibc-headers-2.17-222.el7.x86_64

# rpm -qa | grep centos-release
centos-release-7-5.1804.4.el7.centos.x86_64

It would be great if you could publish it as a crate so one can just do `cargo install termpix`.
Hi, I would like to use termpix on Ubuntu.
Trying to install it give the following error:
```
error: expected ident, found #
   --> root/.cargo/registry/src/github.com-1ecc6299db9ec823/bitflags-1.0.1/src/lib.rs:423:29
    |
423 |                               #[allow(deprecated)]
    |                               ^
    | 
   ::: root/.cargo/registry/src/github.com-1ecc6299db9ec823/bitflags-1.0.1/src/example_generated.rs
    |
4   | / bitflags! {
5   | |     /// This is the same `Flags` struct defined in the [crate level example](../index.html#example).
6   | |     /// Note that this struct is just for documentation purposes only, it must not be used outside
7   | |     /// this crate.
...   |
13  | |     }
14  | | }
    | |_- in this macro invocation

error: Could not compile `bitflags`.
Build failed, waiting for other jobs to finish...
error: failed to compile `termpix v0.1.0 (https://github.com/hopey-dishwasher/termpix#bb2fcc5e)`, intermediate artifacts can be found at `/tmp/cargo-install.sp8ocd7rH3bQ`

Caused by:
  build failed
```
